# 202020_toaster

./: .gitignore  CMakeLists.txt  README.md
include/: Toaster.h
lib/WinToast/: CMakeLists.txt
src/: Toaster.cpp  main.cpp
